# shelll

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  project.yml  tailwind.config.js
.constellation/: project.schema.json
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AppPicker.tsx  TabBar.tsx  TerminalContainer.tsx  TerminalPane.tsx  TiledPane.tsx
src/hooks/: useTabGroups.ts  useTabManager.ts  useWindowAttachment.ts
src/types/: tab.ts
