[package]
name = "shelll"
version = "0.0.0"
description = "A temporary terminal overlay"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "macos-private-api", "clipboard-all", "shell-open", "global-shortcut-all", "window-all", "dialog-save", "fs-write-file"] }
window-vibrancy = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
portable-pty = "0.8"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
# Async runtime for PTY reading
tokio = { version = "1", features = ["full"] }
# macOS APIs for window attachment feature
cocoa = "0.25"
objc = "0.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
